tests/ui/consts/const-return-outside-fn.stderr
error[E0572]: return statement outside of function body
  --> $DIR/const-return-outside-fn.rs:3:5
   |
LL |     return;
   |     ^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0572`.
